<resources>
    <string name="app_name">病哩病哩</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">病哩病哩</string>
    <string name="title_activity_display_patient">患者信息</string>
    <string name="patientName">姓名</string>
    <string name="patientAge">年龄</string>
    <string name="serverAddress">服务器地址</string>
    <string name="id">查询ID</string>
    <string name="query">查询</string>
    <string name="patientSex">性别</string>
    <string name="patientNFC">ID</string>
    <string name="demoInfo">个人信息</string>
    <string name="patientDoc">主治医师</string>
    <string name="pathologicalData">病理数据</string>
    <string name="bodyTmp">体温</string>
    <string name="perMin">/分钟</string>
    <string name="bodyPulse">脉搏</string>
    <string name="breathFreq">呼吸</string>
    <string name="bloodRelease">血压舒张压</string>
    <string name="mmHg">mmHg</string>
    <string name="bloodTense">血压收缩压</string>
    <string name="bloodGas">血气分析</string>
    <string name="pH">pH</string>
    <string name="dialog_server_timeout">服务器不存在或响应超时</string>
    <string name="OK">知道了</string>
    <string name="dismiss">取消</string>
    <string name="patientSent">病人信息已发送至服务器.</string>
    <string name="sendingPatient">正在上传病人信息...</string>
    <string name="addPatient">新增</string>
    <string name="serverOut">服务器不存在或连接超时</string>
    <string name="nfcWritten">NFC数据读取成功</string>
    <string name="ndefGetFail">没有获得NDEF实例</string>
    <string name="nfcWarning">该设备不支持NFC标签读取功能</string>
    <string name="nfcChecking">正在检查NFC状态...</string>
    <string name="bloodNa">血钠</string>
    <string name="bloodK">血钾</string>
    <string name="mmolPerL">mmol/L</string>
    <string name="notes">其他备注</string>
    <string name="opPending">手术类型</string>
    <string name="pathoReport">病理报告</string>
    <string name="imaging">影像学结果</string>
    <string name="ECG">心电图备注</string>
    <string name="docNote">医嘱</string>
    <string name="serverNullTitle">服务器错误</string>
    <string name="patientLevel">护理等级</string>
    <string name="patientTaboo">护理禁忌</string>
</resources>
